--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <div id="container">
         <!-- Start Audio Image -->
         <div id="audio-image">
-            <img class="cover" src="images/covers/secondhand-serenade.jpg">
+            <img class="cover">
         </div>
         <!-- End Audio Image -->
 
         <div id="audio-player">
             <!-- Start audio info -->
             <div id="audio-info">
-                <span class="artist">Secondhand Serenade</span> - <span class="title">Maybe</span>
+                <span class="artist"></span> - <span class="title"></span>
             </div>
             <!-- Start audio info -->
 
@@ -50,8 +50,9 @@
             <div class="clearfix"></div>
             <!-- Start Playlist View -->
             <ul id="playlist" class="hidden">
-                <li class="active" song="Secondhand Serenade - Maybe" cover="none" artist="Secondhand Serenade">Maybe.mp3</li>
-                <li song="" cover="" artist="">Name of the song2.mp3</li>
+                <li song="maybe.mp3" cover="secondhand-serenade.jpg" artist="Secondhand Serenade">Maybe</li>
+                <li song="SleeplessNight.mp3" cover="sleeplessnight.jpg" artist="Ayokay">Sleepless Night</li>
+                <li song="WhyDontWe.mp3" cover="whydontwe.jpg" artist="8 Letters">Why don't we</li>
             </ul>
             <!-- End Playlist View -->
         </div>
