--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML5 Audio Player</title>
     <meta name="Amirul Ikmal" content="" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
